--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
           <li><%= link_to 'profile', user_path(current_user.username) %></li>
           <li><%= link_to 'sign out', session_path(current_user.username), method: :delete %></li>
         <% else %>
+          <li><%= link_to 'users', users_path %></li>
           <li><%= link_to 'sessions', pairsessions_path %></li>
           <li><%= link_to 'sign up', new_user_path %></li>
           <li><%= link_to 'sign in', new_session_path %></li>
